<resources>
    <string name="app_name">FSnail</string>
    <string name="prompt_email">邮箱</string>
    <string name="prompt_email1">邮箱</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登陆</string>
    <string name="error_incorrect_password">用户名或者密码错误，请重新输入</string>
    <string name="detail_title">详情</string>
    <string name="btn_save">保存</string>
    <string name="btn_ensure">确定</string>
    <string name="btn_return">返回</string>
    <string name="text_crad_num">卡券编号:</string>
    <string name="text_product_name">产品名称:</string>
    <string name="text_produce_type">产品类别:</string>
    <string name="text_price">价格:</string>
    <string name="text_discount">折扣:</string>
    <string name="text_use_voucher">使用代金券:</string>
    <string name="text_last_price">最终价格:</string>
    <string name="text_buy_time">购买时间:</string>
    <string name="text_buy_name">购买者姓名:</string>
    <string name="text_buy_phone">购买者手机:</string>
    <string name="text_binding_name">绑定者姓名:</string>
    <string name="text_binding_phone">绑定者用户手机:</string>
    <string name="text_binding_time">绑定时间:</string>
    <string name="text_card_type">卡券类型:</string>
    <string name="text_get_time">获赠时间:</string>
    <string name="text_use_price">已抵用金额:</string>
    <string name="text_left_price">剩余金额:</string>
    <string name="text_check_consumption">查看卡券消费记录:</string>
    <string name="card_num">卡券编号</string>
    <string name="product_name">产品\n名称</string>
    <string name="produce_type">产品\n类别</string>
    <string name="price">价格</string>
    <string name="buy_customer">购买顾客</string>
    <string name="bind_customer">绑定顾客</string>
    <string name="bind_phone">绑定用\n户手机</string>
    <string name="card_type">卡券类型</string>
    <string name="buy_time">购买时间</string>
    <string name="text_operation">操作</string>
    <string name="text_card_manager">卡券管理记录</string>
    <string name="text_businessman">商户</string>
    <string name="text_type">类别</string>
    <string name="text_type1">类别:</string>
    <string name="text_service_name">服务名称</string>
    <string name="text_product_price">产品价格</string>
    <string name="text_use_card_money">使用卡券金额</string>
    <string name="text_use_time">消费时间</string>
    <string name="text_use_total_money">已消费总金额:</string>
    <string name="text_order_list">商品订单列表</string>
    <string name="text_order_num">订单号</string>
    <string name="text_order_num1">订单\n号</string>
    <string name="text_brand">品牌</string>
    <string name="text_brand1">品牌:</string>
    <string name="text_number">个数</string>
    <string name="text_store">店铺</string>
    <string name="text_order_channel">下单\n渠道</string>
    <string name="text_initial_price">初始\n价格</string>
    <string name="text_voucher">代金券使用</string>
    <string name="text_finally_price">最终\n价格</string>
    <string name="text_order_time">订单\n时间</string>
    <string name="text_pay_method">支付\n方式</string>
    <string name="text_customer">顾客</string>
    <string name="text_customer_phone">顾客\n手机</string>
    <string name="text_order_status">订单\n状态</string>
    <string name="text_price_menu">价格单</string>
    <string name="text_edit_book">修改预约</string>
    <string name="text_add_book">添加预约</string>
    <string name="text_menu_tips">I nostri serviz</string>
    <string name="text_book_manager">预约管理</string>
    <string name="book_time">预约时间</string>
    <string name="book_date">日期</string>
    <string name="employee_nickname">员工昵称</string>
    <string name="customer_name">顾客姓名</string>
    <string name="text_service">服务</string>
    <string name="text_status">状态</string>
    <string name="text_cancel_book">取消预约</string>
    <string name="hint_produce_type">产品类别</string>
    <string name="title_market">商城</string>
    <string name="title_identifier">编号</string>
    <string name="title_pro_name">产品名称</string>
    <string name="title_type">类别</string>
    <string name="title_descripe">描述</string>
    <string name="title_money">金额</string>
    <string name="tips_choose_customer_account">你要使用哪个顾客账号</string>
    <string name="clear_shopcar_tips">您的购物车中有另外一位顾客:张三123456789的商品，请清空购物车再进行添加。您要现在清空购物车吗？</string>
    <string name="status_no_tart">未开始</string>
    <string name="status_progress">进行中</string>
    <string name="status_finish">已结束</string>
    <string name="status_booked">已预约</string>
    <string name="status_cancel">已取消</string>
    <string name="status_paied">已支付</string>
    <string name="status_delivered">已发货</string>
    <string name="status_complete">已完成</string>
    <string name="status_uncomplete">未完成</string>
    <string name="payway1">信用卡</string>
    <string name="payway2">卡券</string>
    <string name="card_type1">获赠</string>
    <string name="card_type2">购买</string>
    <string name="keyongjifen">可用积分</string>
    <string name="keyongjifen1">可用积分:</string>
    <string name="tip_enter_account">请输入注册邮箱/手机号码</string>
    <string name="enter_correct_account">请输入正确的账号</string>
    <string name="tip_enter_password">请输入密码</string>
    <string name="sending">发送中...</string>
    <string name="laucning">正在登录</string>
    <string name="str_no_internet">无网络连接</string>
    <string name="tv_customer_phone">顾客手机:</string>
    <string name="tv_book_date">预约日期:</string>
    <string name="tv_please_select">请选择</string>
    <string name="tv_coupon">优惠券</string>
    <string name="tv_buy">购买</string>
    <string name="tv_service_charge">手续费</string>
    <string name="tv_sure">确认</string>
    <string name="tv_cancel">取消</string>
    <string name="tv_shift">轮班</string>
    <string name="tv_shop_car">购物车</string>
    <string name="tv_customer_name">员工姓名</string>
    <string name="tv_long_end">多久结束</string>
    <string name="tv_today_employee">今日考勤员工</string>
    <string name="tv_all_employee">全部员工</string>
    <string name="tv_add_book_service">添加已预约服务</string>
    <string name="tv_add_new_service">添加新服务</string>
    <string name="tv_set_rest">设置休息</string>
    <string name="tv_customer_birthday">顾客出生日期</string>
    <string name="tv_things_descripe">事由描述</string>
    <string name="tv_card_manager">卡券管理</string>
    <string name="tv_service">服务:</string>
    <string name="tv_price">价格:</string>
    <string name="tv_manicure">美甲商家</string>
    <string name="tv_time">时间</string>
    <string name="tv_serch">查找</string>
    <string name="tips_customer_information">顾客信息不全</string>
    <string name="tv_employee">员工</string>
    <string name="tv_book">预约</string>
    <string name="tv_order_manager">订单管理</string>
    <string name="tv_conpous_manager">礼券管理</string>
    <string name="tv_market">商场</string>
    <string name="tv_register_time">登记时间</string>
    <string name="hint_customer_phone">顾客手机</string>
    <string name="tv_order_status">订单状态</string>
    <string name="tv_phone_number">电话号码</string>
    <string name="tv_first_choose">优选</string>
    <string name="tv_add_service">添加服务</string>
    <string name="tv_employee_name">顾客姓名:</string>
    <string name="tips_customer_information_complete">顾客信息未完善</string>
    <string name="tips_add_new_service">+ 新服务</string>
    <string name="tv_employee_nickname">员工昵称:</string>
    <string name="tv_new_type">+ 新类别</string>
    <string name="tv_already_book_service">已预约服务</string>
    <string name="tv_check_book">预约查看</string>
    <string name="tv_add_customer">添加顾客</string>
    <string name="tv_is_app">是否是app用户</string>
    <string name="tv_birthday">出生日期:</string>
    <string name="tv_phone_number1">手机号码:</string>
    <string name="tv_address">地址:</string>
    <string name="tv_register_date">登记日期:</string>
    <string name="tv_push">推送:</string>
    <string name="tv_has_illness">是否有疾病</string>
    <string name="tv_yes">是</string>
    <string name="tv_no">否</string>
    <string name="tv_drug_use">药物服用</string>
    <string name="tv_allergy">过敏</string>
    <string name="tv_is_get_service">是否已接受过服务</string>
    <string name="tv_time_start_service">何时开始的服务</string>
    <string name="tv_how_often_service">每隔多久服务一次</string>
    <string name="tv_not_often">不经常</string>
    <string name="tv_one_week">一周一次</string>
    <string name="tv_one_month">一月一次</string>
    <string name="tv_nerver">从来没有</string>
    <string name="tv_is_like_manicure">喜爱美甲吗:</string>
    <string name="tv_manicure_type">美甲类型:</string>
    <string name="tv_phototherapy">光疗</string>
    <string name="tv_nail">Q甲</string>
    <string name="tv_conmmon">普通</string>
    <string name="tv_others">其他</string>
    <string name="tv_remarks">备注:</string>
    <string name="tv_last_consume">最后一次消费:</string>
    <string name="tv_total_consume">消费总额:</string>
    <string name="tv_get_integral">已获取积分:</string>
    <string name="tv_code_made">二维码生成</string>
    <string name="tv_read_agreement">我已认真阅读并同意该</string>
    <string name="tv_read_agreement1">《用户协议》</string>
    <string name="tv_send_msg">发消息</string>
    <string name="tv_user_agreement">用户协议</string>
    <string name="tv_continue_register">顾客信息不完整，继续完成登记吗?</string>
    <string name="tv_to_register">去登记</string>
    <string name="tv_employee_time">员工和时间:</string>
    <string name="tv_is_app_user">是否app\n用户</string>
    <string name="tv_customer_email">顾客邮箱</string>
    <string name="tv_start_time">开始时间</string>
    <string name="tips_price">价格</string>
    <string name="tv_last_price">最终\n价格</string>
    <string name="tv_get">获取</string>
    <string name="tv_total_price">总价格</string>
    <string name="tv_card">卡券</string>
    <string name="tv_voucher_price">券后价</string>
    <string name="tv_app_order">APP下单</string>
    <string name="tv_use_score">可使用分数37</string>
    <string name="tv_final_price">最终价格</string>
    <string name="tv_sorry">非常抱歉，由于系统繁忙，目前只 部分充值成功，您可选择退回剩余 款项或等待继续为您充值。</string>
    <string name="tv_edit">编辑</string>
    <string name="tv_change_service">修改服务</string>
    <string name="tv_start_service">开始服务</string>
    <string name="tv_stop_service">结束服务</string>
    <string name="tv_customer_authentication">顾客已认证</string>
    <string name="tv_date">日期:</string>
    <string name="tv_total_money">总金额</string>
    <string name="tv_deposit_number">物件寄存号码:</string>
    <string name="tv_query">查询</string>
    <string name="tv_total_number">总数</string>
    <string name="del_success">删除成功</string>
    <string name="enter_custom_tip">请输入顾客名字</string>
    <string name="enter_custom_photo_tip">请输入顾客手机号</string>
    <string name="enter_brand_tip">请选择品牌</string>
    <string name="enter_service_tip">请选择服务</string>
    <string name="enter_staff_tip">请选择员工昵称</string>
    <string name="modify_success">修改成功</string>
    <string name="tv_change_status">是否改变状态？</string>
    <string name="start_date">开始日期</string>
    <string name="end_date">截至日期</string>
    <string name="please_select_end_time">请选择结束日期</string>
    <string name="please_select_start_time">请选择开始日期</string>
    <string name="please_select_error_time">出生日期区间选择</string>
    <string name="loading">正在加载...</string>
    <string name="please_select_reg_start">请选择登记开始日期</string>
    <string name="please_select_reg_end">请选择登记结束日期</string>
    <string name="please_select_reg_error_time">出生日期区间选择错误</string>
    <string name="please_select_bir_error_time">出生日期区间选择错误</string>
    <string name="please_select_jifen_error">积分区间</string>
    <string name="staff_id">员工编号</string>
    <string name="staff_status_progress">进行中</string>
    <string name="staff_status_rest">休息</string>
    <string name="staff_status_booked">预约</string>
    <string name="staff_status_holiday">请假</string>
    <string name="please_input_name">请输入姓名</string>
    <string name="please_input_email">请输入邮箱</string>
    <string name="please_input_phome">请输入手机号码</string>
    <string name="please_input_birthday">请输入出生日期</string>
    <string name="please_input_registration">请输入等级日期</string>
    <string name="please_input_ensure_birthday_format">出生日期请输入正确的格式</string>
    <string name="please_input_ensure_registration_format">登记日期请输入正确格式</string>
    <string name="please_input_how_long_format">何时服务请输入正确日期格式</string>
    <string name="please_input_date_format">请输入正确日期格式</string>
</resources>