<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
    <LinearLayout
        android:gravity="center"
        android:layout_marginTop="@dimen/DIMEN_20PX"
        android:layout_width="match_parent"
        android:layout_height="@dimen/DIMEN_98PX"
        android:background="@drawable/service_title_bg"
        android:orientation="horizontal"
        >

        <TextView
            android:text="@string/text_order_num1"
            style="@style/order_title_sty"
            />
        <TextView
            style="@style/order_title_sty"
            android:text="@string/product_name"
            />
        <TextView
            android:id="@+id/tv_service_workers_nickname"
            style="@style/order_title_sty"
            android:text="@string/text_type"
            />
        <TextView
            android:id="@+id/tv_service_customer_name"
            style="@style/order_title_sty"
            android:text="@string/text_brand"
            />
        <TextView
            style="@style/order_title_sty"
            android:text="@string/text_number"
            />
        <TextView
            style="@style/order_title_sty"
            android:text="@string/text_store"
            />
        <TextView
            style="@style/order_title_sty"
            android:text="@string/text_order_channel"
            />
        <TextView
            style="@style/order_title_sty"
            android:text="@string/text_initial_price"
            />
        <TextView
            style="@style/order_title_sty"
            android:text="@string/text_voucher"
            />
        <TextView
            style="@style/order_title_sty"
            android:text="@string/text_finally_price"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textColor="#333333"
            android:textSize="@dimen/DIMEN_28PX"
            android:gravity="center"
            android:layout_weight="1.5"
            android:text="@string/text_order_time"
            />
        <TextView
            style="@style/order_title_sty"
            android:text="@string/text_pay_method"
            />
        <TextView
            style="@style/order_title_sty"
            android:text="@string/text_customer"
            />
        <TextView
            style="@style/order_title_sty"
            android:text="@string/text_customer_phone"
            />
        <TextView
            style="@style/order_title_sty"
            android:text="@string/text_order_status"
            />
        <TextView
            style="@style/order_title_sty"
            android:text="@string/text_operation"
            />

    </LinearLayout>
    


</LinearLayout>