<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
    <LinearLayout
        android:gravity="center"
        android:layout_marginTop="@dimen/DIMEN_20PX"
        android:layout_width="match_parent"
        android:layout_height="@dimen/DIMEN_98PX"
        android:background="@drawable/service_title_bg"
        android:orientation="horizontal"
        >

        <TextView
            android:text="@string/text_businessman"
            style="@style/service_title_sty"
            />
        <TextView
            style="@style/service_title_sty"
            android:text="@string/text_type"
            />
        <TextView
            android:id="@+id/tv_service_workers_nickname"
            style="@style/service_title_sty"
            android:text="@string/text_service_name"
            />
        <TextView
            android:id="@+id/tv_service_customer_name"
            style="@style/service_title_sty"
            android:text="@string/product_name"
            />
        <TextView
            style="@style/service_title_sty"
            android:text="@string/text_product_price"
            />
        <TextView
            style="@style/service_title_sty"
            android:text="@string/text_use_card_money"
            />
        <TextView
            style="@style/service_title_sty"
            android:text="@string/text_use_time"
            />

    </LinearLayout>
    


</LinearLayout>