<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
    <LinearLayout
        android:gravity="center"
        android:layout_marginTop="@dimen/DIMEN_20PX"
        android:layout_width="match_parent"
        android:layout_height="@dimen/DIMEN_98PX"
        android:background="@drawable/service_title_bg"
        android:orientation="horizontal"
        >

        <TextView
            android:visibility="gone"
            android:text="@string/tv_is_app_user"
            style="@style/service_title_sty"
            />
        <TextView
            style="@style/service_title_sty"
            android:text="@string/customer_name"
            />
        <TextView
            style="@style/service_title_sty"
            android:text="@string/hint_customer_phone"
            />
        <TextView
            style="@style/service_title_sty"
            android:text="@string/tv_customer_email"
            />
        <TextView
            style="@style/service_title_sty"
            android:text="@string/tv_customer_birthday"
            />
        <TextView
            style="@style/service_title_sty"
            android:text="@string/tv_register_time"
            />
        <TextView
            style="@style/service_title_sty"
            android:text="@string/keyongjifen"
            />
        <TextView
            style="@style/service_title_sty"
            android:text=""
            />

    </LinearLayout>
    


</LinearLayout>