<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
    <LinearLayout
        android:gravity="center"
        android:layout_marginTop="@dimen/DIMEN_20PX"
        android:layout_width="match_parent"
        android:layout_height="@dimen/DIMEN_98PX"
        android:background="@drawable/service_title_bg"
        android:orientation="horizontal"
        >

        <TextView
            android:text="@string/title_identifier"
            style="@style/service_title_sty"
            />
        <TextView
            style="@style/service_title_sty"
            android:text="@string/title_pro_name"
            />
        <TextView
            android:id="@+id/tv_service_workers_nickname"
            style="@style/service_title_sty"
            android:text="@string/title_type"
            />
        <TextView
            android:id="@+id/tv_service_customer_name"
            style="@style/service_title_sty"
            android:text="@string/text_brand"
            />
        <TextView
            style="@style/service_title_sty"
            android:text="@string/title_descripe"
            />
        <TextView
            style="@style/service_title_sty"
            android:text="@string/title_money"
            />

        <View
            android:layout_width="@dimen/DIMEN_31PX"
            android:layout_height="@dimen/DIMEN_30PX"
            android:layout_marginRight="@dimen/DIMEN_55PX"
            />

    </LinearLayout>
    

</LinearLayout>