<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:background="@drawable/login_input_white_bg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/DIMEN_100PX"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        >
        <TextView
            android:textColor="#333333"
            android:textSize="@dimen/DIMEN_30PX"
            android:layout_marginLeft="@dimen/DIMEN_66PX"
            android:text="@string/tv_shift"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/shop_cart"
            android:layout_marginLeft="@dimen/DIMEN_57PX"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/DIMEN_65PX"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            >
            <TextView
                android:textColor="#94c42e"
                android:textSize="@dimen/DIMEN_26PX"
                android:text="@string/tv_shop_car"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <ImageView

                android:layout_marginLeft="@dimen/DIMEN_13PX"
                android:layout_width="@dimen/DIMEN_51PX"
                android:layout_height="@dimen/DIMEN_40PX"
                android:src="@mipmap/content_icon_cart22"/>
        </LinearLayout>
    </LinearLayout>



    <LinearLayout
        android:gravity="center"
        android:layout_marginTop="@dimen/DIMEN_20PX"
        android:layout_width="match_parent"
        android:layout_height="@dimen/DIMEN_98PX"
        android:background="@drawable/service_title_bg"
        android:orientation="horizontal"
        >

        <TextView
            style="@style/service_title_sty"
            />
        <TextView
            style="@style/service_title_sty"
            android:text="@string/tv_shift"
            />
        <TextView
            style="@style/service_title_sty"
            android:text="@string/book_date"
            />
        <TextView
            style="@style/service_title_sty"
            android:text="@string/tv_customer_name"
            />
        <TextView
            style="@style/service_title_sty"
            android:text="@string/employee_nickname"
            />
        <TextView
            style="@style/service_title_sty"
            android:text="@string/text_status"
            />
        <TextView
            style="@style/service_title_sty"
            android:text="@string/tv_long_end"
            />
        <TextView
            style="@style/service_title_sty"
            android:text="@string/text_service"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/service_recycleview_bg"
        >
    <android.support.v7.widget.RecyclerView

        android:id="@+id/recylerview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />
    <LinearLayout

        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/DIMEN_50PX"
        android:layout_width="match_parent"
        android:layout_height="@dimen/DIMEN_48PX"
        android:gravity="center"
        android:orientation="horizontal"
        >


        <ImageView
            android:src="@mipmap/page_left"
            android:layout_width="@dimen/DIMEN_48PX"
            android:layout_height="@dimen/DIMEN_48PX" />

        <TextView
            android:layout_marginLeft="@dimen/DIMEN_20PX"
            android:layout_width="@dimen/DIMEN_48PX"
            android:layout_height="@dimen/DIMEN_48PX"
            android:background="@drawable/index_number_select_bg"
            android:text="1"
            android:gravity="center"
            android:textColor="#fff"
            />
        <TextView
            android:layout_marginLeft="@dimen/DIMEN_20PX"
            android:layout_width="@dimen/DIMEN_48PX"
            android:layout_height="@dimen/DIMEN_48PX"
            android:background="@drawable/index_number_unselect_bg"
            android:text="2"
            android:gravity="center"
            android:textColor="#333333"
            />
        <TextView
            android:layout_marginLeft="@dimen/DIMEN_20PX"
            android:layout_width="@dimen/DIMEN_48PX"
            android:layout_height="@dimen/DIMEN_48PX"
            android:background="@drawable/index_number_unselect_bg"
            android:text="3"
            android:gravity="center"
            android:textColor="#333333"
            />
        <TextView
            android:layout_marginLeft="@dimen/DIMEN_20PX"
            android:layout_width="@dimen/DIMEN_48PX"
            android:layout_height="@dimen/DIMEN_48PX"
            android:background="@drawable/index_number_unselect_bg"
            android:text="4"
            android:gravity="center"
            android:textColor="#333333"
            />


        <ImageView
            android:layout_marginLeft="@dimen/DIMEN_20PX"
            android:src="@mipmap/page_right"
            android:layout_width="@dimen/DIMEN_48PX"
            android:layout_height="@dimen/DIMEN_48PX" />


    </LinearLayout>
    </LinearLayout>
</LinearLayout>